fixtures/semantic/invalid/recovery/broken-class.php
<?php
class RecoveryBrokenClass
{
    public function broken(
}
